--- a/omod/src/main/webapp/resources/htmlforms/labResults.html
+++ b/omod/src/main/webapp/resources/htmlforms/labResults.html
@@ -38,6 +38,7 @@
 			getField('ldl.value').change(viralLoadValidation);
 			viralLoadValidation;
 			getLatedtVlOrder();
+            jq('#vLoadResults :input').prop( "disabled", false );
 		});
 
 	</script>
@@ -113,8 +114,10 @@
 			<tr>
 				<td>06 (b).</td>
 				<td>HIV Viral Load(LDL)</td>
-				<td></td>
+				<td> - </td>
+				<td> - </td>
 				<td><obs conceptId="1305AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="LDL" id="ldl"  dateLabel="&lt;/td&gt;&lt;td&gt;"/></td>
+
 			</tr>
 			<tr>
 				<td>07.</td>
