changed label facility tested to facility enrolled

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
@@ -97,13 +97,12 @@
                 <th align="left">Age</th>
                 <th align="left">Relation</th>
                 <th align="left">Relationship Status</th>
-                <!--<th align="left">Date</th>-->
                 <th align="left">Baseline HIV Status</th>
                 <th align="left">Test Date</th>
                 <th align="left">HIV Result</th>
                 <th align="left">In Care?</th>
                 <th align="left">CCC Number</th>
-                <th align="left">Facility Tested</th>
+                <th align="left">Facility Enrolled</th>
             </tr>
             </thead>
             <tbody>
