--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
@@ -81,7 +81,7 @@
 				<table>
 					<tr>
 						<td>If Patient Died, please provide Date of Death if Known:</td>
-						<td><obs conceptId="1543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+						<td><obs conceptId="1543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/></td>
 						<td></td>
 						<td></td>
 					</tr>
@@ -94,7 +94,7 @@
 						<td><i>(If transferred out)</i> <br/>Transfer to Facility:</td>
 						<td ><br/><obs conceptId="159495AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/></td>
 						<td>Date Transferred Out<br /></td>
-						<td><br/><obs conceptId="160649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/></td>
+						<td><br/><obs conceptId="160649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " required="true"/></td>
 					</tr>
 				</table>
 			</div>
